# workflow_tester

./: .clang-tidy  CMakeLists.txt  CMakeLists.txt.old  main.cpp
.github/workflows/: analysis.yml  basic.yml  build_and_test.yml  ccache.yml  ci.old  ci.yml  ci.yml2  clang-tidy.yml  clang-tidy.yml.bak  cppcheck.yml  cppcheck.yml.bak  feature ci.old  macos.yml.bak  macos_brew_clang.yml  msvc_analysis.yml.bak  test_caching.yml  test_ccache.yml  test_ccache_win.yml  test_mingw.yml  test_ninja.yml  test_run_cmake.yml  test_run_cmake2.yml  test_sccache.yml  test_setupcpp.yml  test_windows.yml  windows.yml.bak
cmake/: workflow_testerConfig.cmake.in
include/: CMakeLists.txt
include/math/: math.h
include/mylib/: cmath.h  concepts.h  tuple.h  type_list.h  type_traits.h
include/mylib/test/: dummy.h  type_list.h
tests/: CMakeLists.txt  cmath_tests.cpp  concepts_tests.cpp  math_tests.cpp  tuple_tests.cpp  type_list_tests.cpp  type_traits_tests.cpp
tests/test/: test_type_list_tests.cpp
